add social-configurations locations

--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -153,6 +153,12 @@ server                  {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
         }
+
+        location /social-configurations {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
+        }
+
         location /api/v1/realtime-chat/ {
         		resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80;
