--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -154,9 +154,9 @@ server                  {
                 proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
         }
 
-        location /social-configurations {
+        location ~* ^/social-configurations/(.*)$ {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
+                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980/$1$is_args$args;
         }
 
         location /api/v1/realtime-chat/ {
