Updates file values.yaml with a60dbdfe in deployment: ticket-service

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1423,7 +1423,7 @@ deployments:
   - name: ticket-service
     customImage: docker-registry.metechvn.com/dev/omicx-v2/ticket-service
     pullPolicy: Always
-    tag: "4fb5c6cc"
+    tag: 'a60dbdfe'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
