--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -822,6 +822,7 @@ deployments:
         memory: 64Mi
   - name: acd-zalo-connector
     image: acd-zalo-connector
+    customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-zalo-connector
     pullPolicy: Always
     tag: "latest"
     replicaCount: 1
@@ -1028,7 +1029,7 @@ deployments:
         memory: 64Mi
 
   - name: acd-facebook-connector
-    image: acd-facebook-connector
+    customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-facebook-connector
     pullPolicy: Always
     tag: "latest"
     replicaCount: 1
