--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1439,7 +1439,7 @@ deployments:
         DB_PORT: 5432
         DB_USERNAME: omicxadmin
         DB_PASSWORD: Abc@123@345&*^
-        DB_NAME: dev-contact-service
+        DB_NAME: ticket-service
         KAFKA_BROKERS: kafka-0:9092
         KAFKA_SASL_USERNAME: kafka-admin
         KAFKA_SASL_PASSWORD: Metech123
