--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -823,7 +823,7 @@ deployments:
   - name: acd-zalo-connector
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-zalo-connector
     pullPolicy: Always
-    tag: "a244de5e"
+    tag: 'b7251dc0'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
