Updates file values.yaml with f9b0d7db in deployment: acd-workflow

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1459,7 +1459,7 @@ deployments:
   - name: acd-workflow
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-workflow
     pullPolicy: Always
-    tag: "d85389ae"
+    tag: 'f9b0d7db'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
@@ -1548,8 +1548,8 @@ autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
-  targetCPUUtilizationPercentag: "d85389ae"
-  # targetMemoryUtilizationPercentag: 'd85389ae'
+  targetCPUUtilizationPercentag: 'f9b0d7db'
+  # targetMemoryUtilizationPercentag: 'f9b0d7db'
 
 nodeSelector: {}
 
