change cadence server

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1473,7 +1473,7 @@ deployments:
       config:
         PORT: 8080
         CADENCE_SERVER: 103.141.141.60:7833
-        CADENCE_DOMAIN: dev-v2
+        CADENCE_DOMAIN: uat-v2
         CALL_MANAGER_URL: http://103.141.141.53:6969
         ASM_URL: http://omicx-acd-asm-chat-6970-service.omicx-v2-uat.svc.cluster.local:6970
     volumeMounts: {}
