--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -905,6 +905,9 @@ deployments:
         WS_CONNECTOR_URL: omicx-acd-whatsapp-connector-7994-service:7995
         ABLY_TOKEN: buksSw.ftlsiw:6imSNvdBIMOqY6svw9OQ5fjSuVJAx-36OjPEYXRHFZ8
         ACD_WORKFLOW_URL: http://omicx-acd-workflow-8080-service.omicx-v2-uat.svc.cluster.local:8080
+        ASM_URL: http://omicx-acd-asm-chat-6970-service.omicx-v2-uat.svc.cluster.local:6970
+        CALL_MANAGER_URL: http://103.141.141.57:6969
+        CONTACT_SERVICE_URL: http://omicx-contact-service-8080-service.omicx-v2-uat.svc.cluster.local:8080
     volumeMounts: {}
     volumes: {}
     service:
