--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1423,7 +1423,7 @@ deployments:
   - name: ticket-service
     customImage: docker-registry.metechvn.com/dev/omicx-v2/ticket-service
     pullPolicy: Always
-    tag: "b6107637"
+    tag: 'e7b08bae'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
