--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -31,6 +31,9 @@
     "UrlAcdAsmEmail": "http://omicx-acd-asm-email-7990-service:7990/",
     "DomainName": "crm-dev-v2.metechvn.com"
   },
+  "Facebook": {
+   "SecretKey": "aa4ae82924a15c0fe818faec76776eab"
+  },
   "Conversation": {
     "AutoCloseInMinutes": 1440
   },
@@ -69,7 +72,7 @@
     "ConnectionString": "redis-host:6379,password=Metech123",
     "DatabaseId":  0
   },
-    "PaymentGateway": {
+  "PaymentGateway": {
     "VNPAY": {
       "VNP_VERSION": "2.1.0",
       "VNP_TMNCODE": "G1SPD20Q",
