add ai connector

--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -144,6 +144,11 @@ server                  {
                 proxy_pass              http://omicx-call-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/call;
        }
 
+       location /ai/webhook {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-ai-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/receive;
+       }
+
        location /workflow {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-acd-workflow-8080-service.omicx-v2-dev.svc.cluster.local:8080/api/v1/workflows;
