--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -866,7 +866,7 @@ deployments:
   - name: acd-backend
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-backend
     pullPolicy: Always
-    tag: "bd940b45"
+    tag: '4dfee3e6'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
