--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -69,6 +69,10 @@ server                  {
               resolver  kube-dns.kube-system.svc.cluster.local;
               proxy_pass              http://web_back_host;
       }
+
+      location /recordings {
+              proxy_pass              http://103.141.141.55:8888;
+      }
       
       location /EncryptedAbpUserConfiguration/GetAll {
                 client_max_body_size 100M;
