--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -69,10 +69,6 @@ server                  {
               resolver  kube-dns.kube-system.svc.cluster.local;
               proxy_pass              http://web_back_host;
       }
-
-      location /recordings {
-              proxy_pass              http://103.141.141.55:8888;
-      }
       
       location /EncryptedAbpUserConfiguration/GetAll {
                 client_max_body_size 100M;
@@ -119,7 +115,7 @@ server                  {
         location ~* ^/file/(.*)$ {
                 resolver 8.8.8.8;
                 proxy_ssl_verify		off;
-                proxy_pass              https://172.16.88.38/static/$1;
+                proxy_pass              http://103.141.141.55:8888/$1;
         }
 
         location ~*     ^/channelgw/(.*)$ {
