--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -115,7 +115,7 @@ server                  {
         location ~* ^/file/(.*)$ {
                 resolver 8.8.8.8;
                 proxy_ssl_verify		off;
-                proxy_pass              http://103.141.141.55:8888/$1;
+                proxy_pass              http://recording:recording@103.141.141.55:8888/$1;
         }
 
         location ~*     ^/channelgw/(.*)$ {
