--- a/omicx/resources/contact-service/config.yml
+++ b/omicx/resources/contact-service/config.yml
@@ -11,9 +11,7 @@ database:
   name: dev-contact-service
 kafka:
   brokers:
-    - kafka-0:9092
-    - kafka-1:9092
-    - kafka-2:9092
+    - omicx-kafka-0.omicx-kafka-headless.omicx-v2-dev.svc.cluster.local:9092
   security_protocol: SASL_PLAINTEXT
   sasl_mechanisms: CRAM-SHA-512
   sasl_username: kafka-admin
