--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1507,6 +1507,10 @@ deployments:
         CADENCE_DOMAIN: dev-v2
         CALL_MANAGER_URL: http://103.141.141.53:6969
         ASM_URL: http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970
+        KAFKA_BROKERS: kafka-0:9092
+        KAFKA_SASL_USERNAME: kafka-admin
+        KAFKA_SASL_PASSWORD: Metech123
+        KAFKA_SASL_MECHANISM: sha512
     volumeMounts: {}
     volumes: {}
     service:
