Updates file values.yaml with 1f93ac99 in deployment: acd-zalo-connector

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -824,7 +824,7 @@ deployments:
     image: acd-zalo-connector
     customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-zalo-connector
     pullPolicy: Always
-    tag: "latest"
+    tag: '1f93ac99'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
