--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1464,7 +1464,7 @@ deployments:
   - name: acd-workflow
     customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-workflow
     pullPolicy: Always
-    tag: "4b272c9e"
+    tag: '756c47fc'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
@@ -1557,8 +1557,8 @@ autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
-  targetCPUUtilizationPercentag: "4b272c9e"
-  # targetMemoryUtilizationPercentag: '4b272c9e'
+  targetCPUUtilizationPercentag: '756c47fc'
+  # targetMemoryUtilizationPercentag: '756c47fc'
 
 nodeSelector: {}
 
