--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1428,7 +1428,7 @@ deployments:
   - name: ticket-service
     customImage: docker-registry.metechvn.com/uat/omicx-v2/ticket-service
     pullPolicy: Always
-    tag: "b6107637"
+    tag: 'c0165979'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
