--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -867,7 +867,7 @@ deployments:
   - name: acd-backend
     customImage: docker-registry.metechvn.com/uat/omicx-v2/acd-backend
     pullPolicy: Always
-    tag: "7095875c"
+    tag: 'a32b4755'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
