--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -115,7 +115,18 @@ server                  {
         location ~* ^/file/(.*)$ {
                 resolver 8.8.8.8;
                 proxy_ssl_verify		off;
-                proxy_pass              https://172.16.88.38/static/$1;
+                proxy_set_header Authorization "Basic cmVjb3JkaW5nOnJlY29yZGluZw==";
+                proxy_pass              http://103.141.141.55:8888/$1;
+        }
+
+        location /ai/webhook {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-ai-connector-8080-service.omicx-v2-uat.svc.cluster.local:8080/webhook/receive;
+        }
+
+        location ~* ^/social-configurations/(.*)$ {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-uat.svc.cluster.local:7980/$1$is_args$args;
         }
 
         location ~*     ^/channelgw/(.*)$ {
