--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -58,6 +58,16 @@ server                  {
                 proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-uat.svc.cluster.local:3000/campaign;
        }
 
+       location /api/ai-chat {
+        client_max_body_size 100M;
+        proxy_set_header Connection '';
+        proxy_http_version 1.1;
+        chunked_transfer_encoding off;
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_pass              http://103.141.140.71:11002/api/v1/chat;
+      }
+
       location /api {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
